fixed dropdown z-index again, fixed hero2 image in about header

--- a/revclient/src/components/Layout/Nav.scss
+++ b/revclient/src/components/Layout/Nav.scss
@@ -148,6 +148,7 @@ nav {
 				right: 0;
 				padding: 10px 20px 10px 10px;
 				margin-right: 20px;
+				z-index: 10;
 				@media #{$tablet} {
 					display: none;
 				}
