--- a/revclient/src/views/About/Header/Header.scss
+++ b/revclient/src/views/About/Header/Header.scss
@@ -3,13 +3,7 @@
 	display: flex;
 	justify-content: space-between;
 	margin-bottom: 16rem;
-
-	// .images {
-	//     display: flex;
-	//     justify-content: space-between;
-	//     flex-flow: row nowrap;
-	//     z-index: 0;
-	// }
+	overflow: hidden;
 	h1 {
 		color: $snow-white;
 		font-family: 'futura-pt';
@@ -17,24 +11,13 @@
 		font-weight: 500;
 		line-height: 1.61;
 		letter-spacing: 5.58px;
-		position: absolute;
-		// margin: 50% 50%;
-		// text-align: center;
-		left: 33.3%;
-		top: 30%;
-		// margin: 0 auto;
+		align-self: center;
 		z-index: 1;
 	}
 	img {
 		object-fit: contain;
-        overflow: hidden;
-        // z-index: 0;
 	}
 	.img2 {
-		position: relative;
-		top: 27px;
-		right: 0;
-        margin-left: 10%;
-        // z-index: -1;  
+		margin-bottom: -66px;
 	}
 }
